--- a/duodécimo/modelos.html
+++ b/duodécimo/modelos.html
@@ -23,28 +23,200 @@
       </ul>
     </nav>
   </header>
-
-  <section class="modelos">
-    <h1>Modelos CUPRA</h1>
+  <main>
+    <section class="modelos">
+    <h1 class="modelosh12">Modelos CUPRA</h1>
     <div class="modelos-container">
-      <div class="modelo-card">
-        <img src="images/formentor.jpg" alt="CUPRA Formentor">
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Formentor"
+            data-velocidad="250 km/h"
+            data-autonomia="550 km"
+            data-aceleracion="4.9 s (0-100 km/h)"
+            data-motor="Híbrido enchufable"
+            data-precio="Desde 44.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/cars/formentor/automatic-gallery/new-cupra-formentor-2024-graphene-grey-v2.jpg" alt="">
         <h2>Formentor</h2>
         <p>SUV coupé de alto rendimiento con diseño dinámico y motor híbrido enchufable.</p>
-      </div>
+        </div>
 
-      <div class="modelo-card">
-        <img src="images/leon.jpg" alt="CUPRA León">
+        <div class="modelo-card"
+            data-nombre="CUPRA León"
+            data-velocidad="250 km/h"
+            data-autonomia="500 km"
+            data-aceleracion="5.7 s (0-100 km/h)"
+            data-motor="Motor gasolina turbo"
+            data-precio="Desde 34.500 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/cars/leon/automatic-gallery-pure-magnetism/new-cupra-leon-2024-car-model-rear.jpg" alt="">
         <h2>León</h2>
         <p>Deportivo compacto con un diseño afilado y múltiples opciones de motorización.</p>
-      </div>
+        </div>
 
-      <div class="modelo-card">
-        <img src="images/born.jpg" alt="CUPRA Born">
+        <div class="modelo-card"
+            data-nombre="CUPRA Born"
+            data-velocidad="200 km/h"
+            data-autonomia="540 km"
+            data-aceleracion="7.3 s (0-100 km/h)"
+            data-motor="100% eléctrico"
+            data-precio="Desde 35.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/our-dna/garage/article/launch-cupra-born-electric-car/article-hero/x-large/cupra-el-born-full-electric-car.jpg" alt="">
         <h2>Born</h2>
         <p>100% eléctrico, diseñado para una nueva era de movilidad sin emisiones.</p>
-      </div>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Ateca"
+            data-velocidad="247 km/h"
+            data-autonomia="450 km"
+            data-aceleracion="6.3 s (0-100 km/h)"
+            data-motor="Motor turbo de gasolina"
+            data-precio="Desde 42.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/cars/cupra-ateca/overview/header/cupra-ateca-2024-graphite-grey-suv.jpg" alt="">
+        <h2>Ateca</h2>
+        <p>El SUV de alto rendimiento con motor turbo y carácter deportivo urbano.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Tavascan"
+            data-velocidad="180 km/h"
+            data-autonomia="530 km"
+            data-aceleracion="6.0 s (0-100 km/h)"
+            data-motor="Eléctrico 100%"
+            data-precio="Desde 50.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/cars/tavascan/automatic-gallery/x-large/cupra-tavascan-blue-colour-21-inch-copper-black-covers-wheels.jpg" alt="">
+        <h2>Tavascan</h2>
+        <p>El primer SUV coupé 100% eléctrico de CUPRA, tecnología y diseño futurista.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA UrbanRebel"
+            data-velocidad="180 km/h"
+            data-autonomia="300 km"
+            data-aceleracion="6.5 s (0-100 km/h)"
+            data-motor="Eléctrico"
+            data-precio="Desde 25.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/countries/es/cupra-website/es/concept-cars/urbanrebel-racing/_jcr_content/article/richtextwithfloating_1159325189/singlevideoimage.resizedViewPort.scale.assetRootXL.jpg" alt="">
+        <h2>UrbanRebel</h2>
+        <p>El concepto urbano eléctrico con alma de carreras. Compacto, potente y revolucionario.</p>
+        </div>
+        
+        <div class="modelo-card"
+            data-nombre="CUPRA CUPRA R"
+            data-velocidad="280 km/h"
+            data-autonomia="N/A"
+            data-aceleracion="4.0 s (0-100 km/h)"
+            data-motor="Motor gasolina turbo"
+            data-precio="Desde 55.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://a.ccdn.es/cnet/contents/media/seat/leon/1194442.jpg/900x505cut/" alt="">
+        <h2>CUPRA R</h2>
+        <p>Deportivo de alto rendimiento, con una aerodinámica optimizada y motor de altas prestaciones.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Formentor VZ5"
+            data-velocidad="270 km/h"
+            data-autonomia="600 km"
+            data-aceleracion="4.2 s (0-100 km/h)"
+            data-motor="5 cilindros turbo"
+            data-precio="Desde 50.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/our-dna/garage/article/cupra-formentor-vz5/single-image/01-cupra-formentor-vz5-magnetic-tech-matte.jpg" alt="">
+        <h2>Formentor VZ5</h2>
+        <p>El SUV deportivo de edición limitada con un motor de 5 cilindros turboalimentado.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA León Competición"
+            data-velocidad="300 km/h"
+            data-autonomia="N/A"
+            data-aceleracion="2.7 s (0-100 km/h)"
+            data-motor="Motor de competición"
+            data-precio="Precio no disponible"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.cupraofficial.es/content/dam/public/cupra-website/cars/cupra-leon-vz-tcr/two-columns/cupra-leon-vz-tcr-aerodynamic-car-body.jpg/_jcr_content/renditions/noretina.jpeg" alt="">
+        <h2>León Competición</h2>
+        <p>Un coche de carreras, diseñado para las competiciones más exigentes y con una velocidad impresionante.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Born GTX"
+            data-velocidad="210 km/h"
+            data-autonomia="550 km"
+            data-aceleracion="6.1 s (0-100 km/h)"
+            data-motor="Eléctrico de alto rendimiento"
+            data-precio="Desde 38.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC-YVkBMntZYMeKlv7hSIF72Pv1chv_Q8iOQ&s" alt="">
+        <h2>Born GTX</h2>
+        <p>Versión de alto rendimiento del CUPRA Born, con más potencia y un diseño agresivo.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Ateca VZ"
+            data-velocidad="250 km/h"
+            data-autonomia="470 km"
+            data-aceleracion="5.3 s (0-100 km/h)"
+            data-motor="Turboalimentado 2.0"
+            data-precio="Desde 46.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://cdn-images.motor.es/image/m/1100w/fotos-noticias/2021/04/opel-zafira-e-life-202176875-1617984369_1.jpg" alt="">
+        <h2>Ateca VZ</h2>
+        <p>La versión de alto rendimiento del Ateca, para aquellos que buscan la máxima potencia y estilo.</p>
+        </div>
+
+        <div class="modelo-card"
+            data-nombre="CUPRA Tavascan Concept"
+            data-velocidad="200 km/h"
+            data-autonomia="520 km"
+            data-aceleracion="6.5 s (0-100 km/h)"
+            data-motor="100% eléctrico"
+            data-precio="Desde 58.000 €"
+            onclick="mostrarInfo(this)">
+        <img src="https://www.seat.es/content/countries/es/seat-website/es/sobre-seat/noticias/corporativas/cupra-tavascan-concept-car-electrico/_jcr_content/article/richtextwithfloating_852909946/singlevideoimage.resizedViewPort.scale.assetRootXL.jpg" alt="">
+        <h2>Tavascan Concept</h2>
+        <p>El concepto de un SUV eléctrico del futuro, con tecnología de vanguardia y un diseño innovador.</p>
+        </div>
     </div>
-  </section>
+    </section>
+
+    <div id="modal" class="modal oculto">
+    <div class="modal-content">
+        <span class="cerrar" onclick="cerrarModal()">&times;</span>
+        <h2 id="modal-nombre"></h2>
+        <ul>
+        <li><strong>Velocidad:</strong> <span id="modal-velocidad"></span></li>
+        <li><strong>Autonomía:</strong> <span id="modal-autonomia"></span></li>
+        <li><strong>Aceleración:</strong> <span id="modal-aceleracion"></span></li>
+        <li><strong>Motor:</strong> <span id="modal-motor"></span></li>
+        <li><strong>Precio:</strong> <span id="modal-precio"></span></li>
+        </ul>
+    </div>
+    </div>
+    <script>
+        function mostrarInfo(card) {
+        // Tomar datos desde los atributos data-*
+        document.getElementById('modal-nombre').textContent = card.dataset.nombre;
+        document.getElementById('modal-velocidad').textContent = card.dataset.velocidad;
+        document.getElementById('modal-autonomia').textContent = card.dataset.autonomia;
+        document.getElementById('modal-aceleracion').textContent = card.dataset.aceleracion;
+        document.getElementById('modal-motor').textContent = card.dataset.motor;
+        document.getElementById('modal-precio').textContent = card.dataset.precio;
+
+        // Mostrar el modal
+        document.getElementById('modal').classList.remove('oculto');
+        }
+
+        function cerrarModal() {
+        document.getElementById('modal').classList.add('oculto');
+        }
+        </script>
+  </main>
 </body>
 </html>
