--- a/duodécimo/index.html
+++ b/duodécimo/index.html
@@ -17,7 +17,7 @@
         <li><a href="./modelos.html">Modelos</a></li>
         <li><a href="#">Historia</a></li>
         <li><a href="#">Tecnología</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
