--- a/duodécimo/index.html
+++ b/duodécimo/index.html
@@ -15,8 +15,8 @@
       <ul>
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./modelos.html">Modelos</a></li>
-        <li><a href="#">Historia</a></li>
-        <li><a href="#">Tecnología</a></li>
+        <li><a href="historia.html">Historia</a></li>
+        <li><a href="tecnologia.html">Tecnología</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
