retocar el diseño para mañana

--- a/trece/otakar.html
+++ b/trece/otakar.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>Otakar Esports</h1>
+    <img src="https://yt3.googleusercontent.com/NQztpDNAYj2JyAXnKLxP8HcrbU88cTxjnw-DaHdeWaeq9VYq-epPKlJLpZ4KmUrArjC5d2lMUg=s900-c-k-c0x00ffffff-no-rj" alt="">
     <nav>
       <a href="#equipo" tabindex="1">Equipo</a>
       <a href="#noticias" tabindex="2">Noticias</a>
@@ -35,7 +35,7 @@
         <a href="#noticias" class="btn-primary" tabindex="6">Ver Noticias</a>
       </div>
       <div class="hero-img" aria-hidden="true">
-        <img src="https://cdn.example.com/mixwell-hero.jpg" alt="Imagen de Mixwell, jugador principal de Otakar Esports" />
+        <img src="https://img.redbull.com/images/c_crop,x_0,y_0,h_1920,w_3840/c_fill,w_1500,h_714/q_auto,f_jpg/redbullcom/2024/12/4/fa24zvmj2bk0oavko49s/mixwell-presenta-otakar-esports-valorant" alt="" />
       </div>
     </section>
 
@@ -43,52 +43,55 @@
       <h2>Nuestro Equipo</h2>
       <div class="team-grid">
         <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/mixwell.jpg" alt="Mixwell" />
+            <img src="https://img.redbull.com/images/c_crop,x_0,y_0,h_1920,w_3840/c_fill,w_1500,h_714/q_auto,f_jpg/redbullcom/2024/12/4/fa24zvmj2bk0oavko49s/mixwell-presenta-otakar-esports-valorant" alt="Mixwell" />
             <h3>Mixwell</h3>
             <p>
-            <img src="https://cdn.example.com/icons/founder.svg" alt="Icono Fundador" class="role-icon" />
             Fundador / Exjugador - Valorant / CS:GO
             </p>
         </article>
         <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/azazin.jpg" alt="azaziN" />
+            <img src="https://liquipedia.net/commons/images/thumb/3/3b/OTK_azaziN_at_Cordoba_Generation_Cup_2025.jpg/600px-OTK_azaziN_at_Cordoba_Generation_Cup_2025.jpg" alt="azaziN" />
             <h3>azaziN (Sergio Gil)</h3>
             <p>
-            <img src="https://cdn.example.com/icons/duelist.svg" alt="Icono Duelista" class="role-icon" />
+            <img src="https://static.wikia.nocookie.net/valorant/images/f/fd/DuelistClassSymbol.png/revision/latest?cb=20200408043920" alt="" class="role-icon" />
             Duelista - Valorant
             </p>
         </article>
         <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/mober.jpg" alt="mober" />
+            <img src="https://liquipedia.net/commons/images/thumb/2/22/OTK_mober_at_Cordoba_Generation_Cup_2025.jpg/600px-OTK_mober_at_Cordoba_Generation_Cup_2025.jpg" alt="mober" />
             <h3>mober (David Illán Padilla)</h3>
             <p>
-            <img src="https://cdn.example.com/icons/initator.svg" alt="Icono Iniciador" class="role-icon" />
+            <img src="https://static.wikia.nocookie.net/valorant/images/0/04/ControllerClassSymbol.png/revision/latest?cb=20200408043911" alt="" class="role-icon" />
+            Smoker - Valorant
+            </p>
+        </article>
+        <article class="player-card" tabindex="0">
+            <img src="https://liquipedia.net/commons/images/thumb/a/a2/OTK_Negradas_at_Cordoba_Generation_Cup_2025.jpg/600px-OTK_Negradas_at_Cordoba_Generation_Cup_2025.jpg" alt="Negradas" />
+            <h3>Negradas (Alejandro Pérez)</h3>
+            <p>
+            <img src="https://static.wikia.nocookie.net/valorant/images/7/77/InitiatorClassSymbol.png/revision/latest?cb=20200408043926" alt="" class="role-icon" />
             Iniciador - Valorant
             </p>
         </article>
         <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/negradas.jpg" alt="Negradas" />
-            <h3>Negradas (Alejandro Pérez)</h3>
+            <img src="https://liquipedia.net/commons/images/thumb/a/a9/OTK_yaggert_at_Cordoba_Generation_Cup_2025.jpg/600px-OTK_yaggert_at_Cordoba_Generation_Cup_2025.jpg" alt="yaggert" />
+            <h3>yaggert (Joel Torres Díaz)</h3>
             <p>
-            <img src="https://cdn.example.com/icons/sentinel.svg" alt="Icono Centinela" class="role-icon" />
+            <img src="https://static.wikia.nocookie.net/valorant/images/4/43/SentinelClassSymbol.png/revision/latest?cb=20200408043934" alt="" class="role-icon" />
             Centinela - Valorant
             </p>
         </article>
         <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/yaggert.jpg" alt="yaggert" />
-            <h3>yaggert (Joel Torres Díaz)</h3>
-            <p>
-            <img src="https://cdn.example.com/icons/controller.svg" alt="Icono Controlador" class="role-icon" />
-            Controlador - Valorant
-            </p>
-        </article>
-        <article class="player-card" tabindex="0">
-            <img src="https://cdn.example.com/tomatte.jpg" alt="tomatte" />
+            <img src="https://liquipedia.net/commons/images/thumb/7/75/OTK_tomatte_at_Cordoba_Generation_Cup_2025.jpg/600px-OTK_tomatte_at_Cordoba_Generation_Cup_2025.jpg" alt="tomatte" />
             <h3>tomatte (Diego Alcázar)</h3>
             <p>
-            <img src="https://cdn.example.com/icons/coach.svg" alt="Icono Coach" class="role-icon" />
-            Coach
+            <img src="https://static.wikia.nocookie.net/valorant/images/7/77/InitiatorClassSymbol.png/revision/latest?cb=20200408043926" alt="Icono Coach" class="role-icon" />
+            Flex - Valorant
             </p>
+        </article>
+                <article class="player-card" tabindex="0">
+            <img src="https://pbs.twimg.com/profile_images/1906708829141622784/L6nZ_7y0_200x200.jpg" alt="tomatte" />
+            <h3>KronN(Christian Dominguez)</h3>            
         </article>
       </div>
     </section>
@@ -97,11 +100,8 @@
     <section id="titulos" class="titles" tabindex="-1" aria-label="Títulos ganados por Otakar Esports">
       <h2>Títulos Ganados</h2>
       <ul>
-        <li>Campeonato Nacional de Counter Strike 2023</li>
-        <li>Valencia Esports Open 2024</li>
-        <li>Torneo Internacional de Valorant 2024</li>
-        <li>Major Invitational CS:GO 2023</li>
-        <li>DreamHack Open 2022</li>
+        <li>Campeones de las Clutch Series (2025): Otakar Esports se coronó campeón de las Clutch Series, una de las competiciones clave del Circuito Tormenta. Este triunfo les permitió sumar puntos cruciales para el ranking general del circuito y consolidar su estatus como uno de los equipos más destacados en la escena amateur de VALORANT en España.</li>
+        <li>Invictos en el Circuito Tormenta: Desde su incorporación al Circuito Tormenta en la temporada 2024/25, Otakar Esports ha mantenido una racha invicta, destacándose en cada torneo en el que han participado. Han logrado clasificarse para las finales de todos los torneos en los que han competido, demostrando consistencia y alto nivel competitivo.</li>
       </ul>
     </section>
 
@@ -126,17 +126,6 @@
           <div class="video-item">
             <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video 1" allowfullscreen></iframe>
           </div>
-          <div class="video-item">
-            <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" title="Video 2" allowfullscreen></iframe>
-          </div>
-          <div class="video-item">
-            <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" title="Video 3" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-      <div class="video-controls">
-        <button class="video-btn" aria-label="Video anterior" id="prev-btn" tabindex="7">&larr;</button>
-        <button class="video-btn" aria-label="Video siguiente" id="next-btn" tabindex="8">&rarr;</button>
       </div>
     </section>
 
@@ -177,9 +166,9 @@
     <section id="redes" aria-label="Redes sociales" class="reveal">
       <h2>Síguenos en redes</h2>
       <div class="social-buttons">
-        <a href="https://twitter.com/otakaresports" target="_blank" rel="noopener" aria-label="Twitter">🐦 Twitter</a>
-        <a href="https://www.twitch.tv/otakaresports" target="_blank" rel="noopener" aria-label="Twitch">🎮 Twitch</a>
-        <a href="https://www.instagram.com/otakaresports" target="_blank" rel="noopener" aria-label="Instagram">📸 Instagram</a>
+        <a href="https://twitter.com/otakaresports" target="_blank" rel="noopener" aria-label="Twitter"><img src="logotipos.png" alt=""></a>
+        <a href="https://www.twitch.tv/otakaresports" target="_blank" rel="noopener" aria-label="Twitch"><img src="social.png" alt=""></a>
+        <a href="https://www.instagram.com/otakaresports" target="_blank" rel="noopener" aria-label="Instagram"><img src="instagram.png" alt=""></a>
       </div>
     </section>
 
